--- a/hello/hello.conf
+++ b/hello/hello.conf
@@ -1,4 +1,4 @@
-<VirtualHost *:1000>
+<VirtualHost *>
     #ServerName example.com
 
     #WSGIDaemonProcess yourapplication user=user1 group=group1 threads=5
